# renderer

./: .clang-format  .model.cpp.swp  .model.h.swp  .renderer.h.swp  CMakeLists.txt  Makefile  README.md  a.out  main  main.cpp  model.cpp  model.h  renderer.cpp  renderer.h  todo  vector.cpp  vector.h  vector3d.cpp  vector3d.h
include/: renderer.h
src/: main.cpp  model.cpp  model.h  renderer.cpp  renderer.h  threadpool.cpp  threadpool.h  vector.cpp  vector.h
